--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "2.7",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.10.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
